Fix JDK8/JDK9 incompatibility issues